# krunner-yafti

./: .gitignore  CMakeLists.txt  Containerfile  Justfile  README.md  krunner-yafti.spec  yafticlient.cpp  yafticlient.h  yaftirunner.cpp  yaftirunner.h  yaftirunner.json
.copr/: Makefile
.github/workflows/: build.yml  release.yml
src/: CMakeLists.txt  krunner_yafti.desktop  metadata.json  yaftirunner.cpp  yaftirunner.h
